--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,27 @@
+/*--- Google Font Import ---*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    color: black;
+    background-color: #90A4AE;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+
 .text-shadow {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
@@ -5,6 +29,12 @@
 .flashes h4 {
     line-height: 2;
     background-color: #E9C46A;
+}
+
+.brand-logo {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    text-align: left;
 }
 
 /* --- Hero Image --- */
