--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 
     <header>
         <!--Materialize Top Nav Bar-->
-        <nav class="nav-extended text-shadow #ff6e40 deep-orange accent-2">
-            <div class="nav-wrapper">
+        <nav class="nav-extended">
+            <div class="nav-wrapper text-shadow blue-grey lighten-2">
               <a href="{{ url_for('landing_page') }}" class="brand-logo">Happy Camper</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fa-solid fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
