--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,13 @@
 <!-- page hero image -->
     <div class="hero-outer">
         <div class="container-fluid">
-            <div class="bg-image">
-                        <h1>Happy Camper</h1>
-              
+            <div class="bg-image"> 
             </div>
         </div>
     </div>
-    <div class="container">
-        
+    <div class="row container blue-grey lighten-2">
+        <h3 class="center-align">Happy Camper</h3> 
+        <h4 class="center-align">Find your happy place</h4>
     </div>
 
 {% endblock %}
