--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,33 @@
 {% block content %}
 
 <!-- page hero image -->
-    <div class="hero-outer">
-        <div class="container-fluid">
-            <div class="bg-image"> 
-            </div>
+<div class="hero-outer">
+    <div class="container-fluid">
+        <div class="bg-image"> 
         </div>
     </div>
-    <div class="row container blue-grey lighten-2">
-        <h3 class="center-align">Happy Camper</h3> 
-        <h4 class="center-align">Find your happy place</h4>
-    </div>
+</div>
+<div class="row container blue-grey lighten-2">
+    <h3 class="center-align">Happy Camper</h3> 
+    <h4 class="center-align">Find your happy place</h4>
+</div>
+
+<!-- search bar -->
+<div class="row container white">
+    <form action="{{ url_for('search') }}" method="post" class="col s12">
+        <div class="row valign-wrapper center-align">
+            <div class="input-field col s12 m8">
+                <i class="fas fa-search prefix"></i>
+                <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
+                <label for="query">Search Sites</label>
+            </div>
+            <div class="col s12 m4">
+                <button type="submit" class="btn green">
+                    <i class="fas fa-search right"></i> search
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
