--- a/templates/index.html
+++ b/templates/index.html
@@ -31,4 +31,31 @@
     </form>
 </div>
 
+<!-- Sites cards -->
+<div class="container">
+    <div class="row card-icon">
+        <div class="col s12 m6 l4 center-align">
+            <div class="card-panel">
+                <i class="fas fa-search blue-grey-text darken-3"></i>
+                <h4 class="blue-grey-text darken-3">Search</h4>
+                <p>Discover campsites across the UK</p>
+            </div>
+        </div>
+        <div class="col s12 m6 l4 center-align">
+            <div class="card-panel">
+                <i class="fas fa-file-lines blue-grey-text darken-3"></i>
+                <h4 class="blue-grey-text darken-3">Submit</h4>
+                <p>Share your reviews with fellow campers</p>
+            </div>
+        </div>
+        <div class="col s12 m6 l4 center-align">
+            <div class="card-panel">
+                <i class="fas fa-heart blue-grey-text darken-3"></i>
+                <h4 class="blue-grey-text darken-3">Save</h4>
+                <p>Save your favourite sites in one place</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
