--- a/templates/sites.html
+++ b/templates/sites.html
@@ -42,7 +42,7 @@
 
                     <div class="center-align">
                         <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small green">View</a>
-                        {% if session.user|lower == site.created_by|lower %}
+                        {% if ((session.user|lower == site.created_by|lower) or (session.user == "admin")) %}
                             <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
                             <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                         {% endif %}
