--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -7,49 +7,56 @@
     <!-- site review -->
     <div class="col s12">
         <div class="card-panel grey lighten-5">
-            <!-- site name -->
-            <div class="center-align">
-            <h3 class="review-title">{{ site.site_name }}</h3>
-            </div>
-
-            <!-- site image -->
             <div class="row">
-                <img src="{{ site.image_url }}" alt="campsite image">
-            </div>
-
-            <!-- site location -->
-            <div class="center-align">
-                <p><i class="fas fa-location-dot prefix"></i> Site Location: {{ site.location_name }}</p>
-            </div>
-
-            <!-- visit date -->
-            <div class="center-align">
-                <p><i class="fas fa-calendar-alt prefix"></i> Visit date: {{ site.visit_date }}</p>
-            </div>
-            
-            <!-- review -->
-            <div class="center-align">
-                <p><i class="fas fa-pen prefix"></i> Review: {{ site.site_review }}</p>
-            </div>
-
-            <!-- members only -->
-            <div class="center-align">
-                <div class="switch">
-                    <i class="fas fa-people-group prefix"></i>
-                    <label for="members_only">
-                        Members Only?
-                        {% if site.members_only == "on" %}
-                            <input disabled type="checkbox" id="members_only" name="members_only" checked>
-                        {% else %}
-                            <input disabled type="checkbox" id="members_only" name="members_only">
-                        {% endif %}
-                        <span class="lever"></span>
-                    </label>
+                <!-- site name -->
+                <div class="center-align">
+                    <h3 class="review-title">{{ site.site_name }}</h3>
                 </div>
             </div>
-            <!-- review created by-->
-            <div class="center-align">
-                <p>Reviewed by: {{ site.created_by }}</p>
+            <div class="row">
+                <!-- site image -->
+                <div class="row">
+                    <div class="col s12 l4">
+                        <img src="{{ site.image_url }}" alt="campsite image" class="responsive-img">
+                    </div>
+                    
+                    <div class="col s12 l8">
+                        <!-- site location -->
+                        <div class="center-align">
+                            <p><i class="fas fa-location-dot prefix"></i> Site Location: {{ site.location_name }}</p>
+                        </div>
+
+                        <!-- visit date -->
+                        <div class="center-align">
+                            <p><i class="fas fa-calendar-alt prefix"></i> Visit date: {{ site.visit_date }}</p>
+                        </div>
+                        
+                        <!-- review -->
+                        <div class="center-align">
+                            <p><i class="fas fa-pen prefix"></i> Review: {{ site.site_review }}</p>
+                        </div>
+
+                        <!-- members only -->
+                        <div class="center-align">
+                            <div class="switch">
+                                <i class="fas fa-people-group prefix"></i>
+                                <label for="members_only">
+                                    Members Only?
+                                    {% if site.members_only == "on" %}
+                                        <input disabled type="checkbox" id="members_only" name="members_only" checked>
+                                    {% else %}
+                                        <input disabled type="checkbox" id="members_only" name="members_only">
+                                    {% endif %}
+                                    <span class="lever"></span>
+                                </label>
+                            </div>
+                        </div>
+                        <!-- review created by-->
+                        <div class="center-align">
+                            <p>Reviewed by: {{ site.created_by }}</p>
+                        </div>
+                    </div>
+                </div>
             </div>
                
             <!-- Back button -->
