--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -87,8 +87,22 @@
                     <a href="{{ url_for('get_sites') }}" class="btn-small green">
                     Back <i class="fas fa-rotate-left right"></i>
                     </a>
-                    {% if session.user|lower == site.created_by|lower %}
-                        <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
+                    {% if ((session.user|lower == site.created_by|lower) or (session.user == "admin")) %}
+                        <!--<a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>-->
+                        <!-- Modal Trigger -->
+                        <button data-target="modal1" class="btn-small red modal-trigger">Delete Modal</button>
+                        <!-- Modal Structure -->
+                        <div id="modal1" class="modal">
+                            <div class="modal-content">
+                            <h5><i class="fas fa-triangle-exclamation small"></i> Are you sure you want to delete this review?
+                                <i class="fas fa-triangle-exclamation small"></i></h5>
+                            <p>Deleting a review cannot be undone afterwards</p>
+                            </div>
+                            <div class="modal-footer">
+                            <a href="{{ url_for('delete_review', site_id=site._id) }}" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                            </div>
+                        </div>
+
                         <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     {% endif %}
                 </div>
