--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,15 @@ h4 {
     color: #fafafa;
 }
 
+.hover-link h4 {
+    color: #37474f;
+}
+
+.hover-link h4:hover {
+    color: #0277bd;
+}
+
+
 /*--- Footer ---*/
 .social-media-icon {
     font-size: 2rem;
